--- a/src/main/resources/assets/createindestructible/lang/en_us.json
+++ b/src/main/resources/assets/createindestructible/lang/en_us.json
@@ -2,5 +2,8 @@
   "block.createindestructible.forgecore": "Forgecore",
   "item.createindestructible.forgecore_incomplete": "Incomplete Forgecore",
   "item.createindestructible.diamond_incomplete": "Incomplete Diamond",
-  "item.createindestructible.lapis_incomplete": "Incomplete Lapis"
+  "item.createindestructible.lapis_incomplete": "Incomplete Lapis",
+  "item.createindestructible.immortal_cookie": "Cookie of Immortality",
+  "item.createindestructible.incomplete_sword": "Incomplete Forgecore Sword",
+  "item.createindestructible.sword": "Forgecore Sword"
 }
