--- a/src/main/resources/assets/createindestructible/lang/en_gb.json
+++ b/src/main/resources/assets/createindestructible/lang/en_gb.json
@@ -5,5 +5,7 @@
   "item.createindestructible.lapis_incomplete": "Incomplete Lapis",
   "item.createindestructible.immortal_cookie": "Biscuit of Immortality",
   "item.createindestructible.incomplete_sword": "Incomplete Forgecore Sword",
-  "item.createindestructible.sword": "Forgecore Sword"
+  "item.createindestructible.sword": "Forgecore Sword",
+  "block.createindestructible.lewite": "Lewite",
+  "item.createindestructible.carbon": "Carbon"
 }
